[gd_scene load_steps=3 format=3 uid="uid://b7vn5wq2m4pxe"]

[ext_resource type="Script" uid="uid://dpibidfy6vkmn" path="res://scripts/dialogue/dialogue_box.gd" id="1_dialogue_box"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.5)

[node name="DialogueBox" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -240.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dialogue_box")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SpeakerRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SpeakerRow"]
custom_minimum_size = Vector2(1520, 0)
layout_mode = 2

[node name="SpeakerName" type="Label" parent="MarginContainer/VBoxContainer/SpeakerRow/TextColumn"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
text = "Speaker Name"

[node name="DialogueText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/SpeakerRow/TextColumn"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "This is the dialogue text that will be displayed character by character."
fit_content = true
